[package]
name = "yellowstone-grpc-client"
version = "0.1.0"
edition = "2024"

[dependencies.bytes]
version = "1.3.0"

[dependencies.futures]
version = "0.3.24"

[dependencies.thiserror]
version = "1.0.63"

[dependencies.tonic]
features = ["tls", "tls-roots"]
version = "0.12.1"

[dependencies.tonic-health]
version = "0.12.1"

[dependencies.yellowstone-grpc-proto]
git = "ssh://git@github.com/manudeobs/yellowstone-grpc-proto.git"
branch = "master"


[dev-dependencies.tokio]
features = ["rt-multi-thread", "macros"]
version = "1.21.2"